--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@emotion/cache": "11.10.8",
-    "@emotion/react": "11.10.8",
-    "@emotion/styled": "11.10.8",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "5.12.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.18.0",
+    "@mui/system": "^5.18.0",
     "@mui/x-data-grid": "^7.27.2",
     "@react-oauth/google": "^0.12.2",
     "chart.js": "4.3.0",
@@ -66,6 +68,7 @@
   },
   "devDependencies": {
     "ajv": "^7.2.4",
+    "cross-env": "^7.0.3",
     "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
@@ -74,7 +77,6 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "path": "^0.12.7",
-    "cross-env": "^7.0.3",
     "rimraf": "^5.0.5"
   },
   "overrides": {
